--- a/workflow-templates/seated-organization-ci-test.yml
+++ b/workflow-templates/seated-organization-ci-test.yml
@@ -1,17 +1,107 @@
-name: Seated Organization CI Test
+name: UAT CI/CD
 
 on:
-  push:
-    branches: [ $default-branch ]
   pull_request:
     branches: [ $default-branch ]
-
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
-
+    outputs:
+      deployment_version: ${{ steps.tagging.outputs.new_tag }}
     steps:
-      - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - name: Set up JDK 13
+      uses: actions/setup-java@v1
+      with:
+        java-version: 13.0.2
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+    - name: Unit Test
+      id: test
+      env:
+        GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
+        GITHUB_USER_TOKEN: ${{ secrets.GH_TOKEN }}
+        ENVIRONMENT_ID: staging
+      run: mvn --settings settings.xml test
+    - name: Tagging
+      id: tagging
+      uses: anothrNick/github-tag-action@1.36.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        DEFAULT_BUMP: patch
+        WITH_V: true
+    - name: Get ECR Login
+      id: get_ecr_login
+      run: echo ::set-output name=ecr_login::\"$(aws ecr get-login-password)\"
+    - name: ECR Push
+      id: push
+      env:
+        GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
+        GITHUB_USER_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: |
+        mvn -U clean compile jib:build \
+        --settings settings.xml \
+        --file pom.xml \
+        -Djib.from.auth.username=AWS \
+        -Djib.from.auth.password=${{ steps.get_ecr_login.outputs.ecr_login }} \
+        -Djib.to.auth.username=AWS \
+        -Djib.to.auth.password=${{ steps.get_ecr_login.outputs.ecr_login }} \
+        -Djib.to.tags=${{ steps.tagging.outputs.new_tag }}
 
-      - name: Run a one-line script
-        run: echo Hello from Seated Organization
+  Notification:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
+      - name: Send Slack Message
+        id: slack
+        uses: slackapi/slack-github-action@v1.15.0
+        with:
+          payload: "{\"repo_name\": \"${{ github.repository }}\", \"branch_ref\": \"${{ github.ref }}\", \"workflow_run_id\": \"${{ github.run_id }}\", \"version_to_deploy\": \"${{ needs.Build.outputs.deployment_version }}\", \"commit_sha\": \"${{ github.sha }}\", \"actor\": \"${{ github.actor }}\", \"env\": \"Default\"}"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_UAT }}
+
+  Deployment:
+    runs-on: ubuntu-latest
+    needs: Build
+    environment:
+      name: Default
+      url: https://console.aws.amazon.com/ecs/home?region=us-east-1#/clusters/default/services/cyberdog/deployments
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+    - name: Download task definition
+      run: |
+        aws ecs describe-task-definition --task-definition cyberdog --query taskDefinition > task-definition.json
+    - name: Fill in the new image ID in the Amazon ECS task definition
+      id: task-def
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      with:
+        task-definition: task-definition.json
+        container-name: cyberdog
+        image: 584691211080.dkr.ecr.us-east-1.amazonaws.com/cyberdog:${{ needs.Build.outputs.deployment_version }}
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: cyberdog
+        cluster: default
+        wait-for-service-stability: true
