--- a/workflow-templates/seated-organization-ci-test.yml
+++ b/workflow-templates/seated-organization-ci-test.yml
@@ -2,13 +2,21 @@ name: UAT CI/CD
 
 on:
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ $default_branch ]
 jobs:
   Build:
     runs-on: ubuntu-latest
     outputs:
       deployment_version: ${{ steps.tagging.outputs.new_tag }}
     steps:
+    - name: Post to a Slack channel
+      id: slack
+      uses: slackapi/slack-github-action@v1.14.0
+      with:
+        channel-id: 'C02GGKYN6SU'
+        slack-message: ':rocket: *`${{ github.actor }}` triggered new CI run on `${{ github.event.repository.name }}-uat`:* https://github.com/seated-tech/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }} *Waiting for build details :clock1: ....*'
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
     - name: Checkout
       uses: actions/checkout@v2
       with:
@@ -28,7 +36,7 @@ jobs:
       env:
         GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
         GITHUB_USER_TOKEN: ${{ secrets.GH_TOKEN }}
-        ENVIRONMENT_ID: staging
+        ENVIRONMENT_ID: uat
       run: mvn --settings settings.xml test
     - name: Tagging
       id: tagging
@@ -45,6 +53,7 @@ jobs:
       env:
         GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
         GITHUB_USER_TOKEN: ${{ secrets.GH_TOKEN }}
+        ENVIRONMENT_ID: uat
       run: |
         mvn -U clean compile jib:build \
         --settings settings.xml \
@@ -67,7 +76,7 @@ jobs:
         id: slack
         uses: slackapi/slack-github-action@v1.15.0
         with:
-          payload: "{\"repo_name\": \"${{ github.repository }}\", \"branch_ref\": \"${{ github.ref }}\", \"workflow_run_id\": \"${{ github.run_id }}\", \"version_to_deploy\": \"${{ needs.Build.outputs.deployment_version }}\", \"commit_sha\": \"${{ github.sha }}\", \"actor\": \"${{ github.actor }}\", \"env\": \"Default\"}"
+          payload: "{\"repo_name\": \"${{ github.repository }}\", \"branch_ref\": \"${{ github.ref }}\", \"workflow_run_id\": \"${{ github.run_id }}\", \"version_to_deploy\": \"${{ needs.Build.outputs.deployment_version }}\", \"commit_sha\": \"${{ github.sha }}\", \"actor\": \"${{ github.actor }}\", \"env\": \"UAT\"}"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_UAT }}
 
@@ -75,8 +84,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: Build
     environment:
-      name: Default
-      url: https://console.aws.amazon.com/ecs/home?region=us-east-1#/clusters/default/services/cyberdog/deployments
+      name: UAT
+      url: https://console.aws.amazon.com/ecs/home?region=us-east-1#/clusters/uat/services/${{ github.event.repository.name }}/deployments
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -90,18 +99,26 @@ jobs:
         aws-region: us-east-1
     - name: Download task definition
       run: |
-        aws ecs describe-task-definition --task-definition cyberdog --query taskDefinition > task-definition.json
+        aws ecs describe-task-definition --task-definition ${{ github.event.repository.name }}-uat --query taskDefinition > task-definition.json
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: cyberdog
-        image: 584691211080.dkr.ecr.us-east-1.amazonaws.com/cyberdog:${{ needs.Build.outputs.deployment_version }}
+        container-name: ${{ github.event.repository.name }}-uat
+        image: 584691211080.dkr.ecr.us-east-1.amazonaws.com/${{ github.event.repository.name }}-uat:${{ needs.Build.outputs.deployment_version }}
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: cyberdog
-        cluster: default
+        service: ${{ github.event.repository.name }}
+        cluster: uat
         wait-for-service-stability: true
+    - name: Post to a Slack channel
+      id: slack
+      uses: slackapi/slack-github-action@v1.14.0
+      with:
+        channel-id: 'C02GGKYN6SU'
+        slack-message: ':rocket: *`${{ github.actor }}`: `${{ github.event.repository.name }}-uat` deployment succeeded :white_check_mark: with version `${{ needs.Build.outputs.deployment_version }}`*'
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
