Update and rename seated-organization-ci-test.yml to seated-organization-ci-uat.yml

--- a/workflow-templates/seated-organization-ci-uat.yml
+++ b/workflow-templates/seated-organization-ci-uat.yml
@@ -2,7 +2,7 @@ name: UAT CI/CD
 
 on:
   pull_request:
-    branches: [ $default_branch ]
+    branches: [ $default-branch ]
 jobs:
   Build:
     runs-on: ubuntu-latest
