--- a/workflow-templates/seated-organization-ci-uat.yml
+++ b/workflow-templates/seated-organization-ci-uat.yml
@@ -38,13 +38,16 @@ jobs:
         GITHUB_USER_TOKEN: ${{ secrets.GH_TOKEN }}
         ENVIRONMENT_ID: uat
       run: mvn --settings settings.xml test
+    # UAT tag will be generated when PR is created against master, X.Y.Z-alpha.t
     - name: Tagging
       id: tagging
       uses: anothrNick/github-tag-action@1.36.0
       env:
+        RELEASE_BRANCHES: release
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         DEFAULT_BUMP: patch
         WITH_V: true
+        PRERELEASE_SUFFIX: alpha
     - name: Get ECR Login
       id: get_ecr_login
       run: echo ::set-output name=ecr_login::\"$(aws ecr get-login-password)\"
